# ZKFL

./: .gitignore  Cargo.toml  centralized_acc.txt  dp_mnist0.5.txt  dp_mnist1.0.txt  dp_mnist1.5.txt  fl_cifar.txt  fl_cifar1.txt  fl_dp_2delta.txt  fl_mnist.txt  fl_mnist_dp0.5.txt  fl_mnist_dp1.5.txt  fl_mnist_dp1.txt  fl_mnist_mal.txt  fl_mnist_no_mal.txt  global_accuracy.txt  main.rs  noise05.txt  noise1.txt  noise_0.5.txt  noise_1.5.txt  noise_15.txt  plot.ipynb  plot.py  pofl_mnist1.0.txt  pofl_mnist1.5.txt  pyproject.toml  val_mnist2.0.txt  vanilla_acc.txt  vanilla_acc_200.txt  zk_mal.txt  zk_nomal.txt  zkfl_acc_with_mal200.txt  zkfl_acc_without_mal.txt
log/: cl_200.txt  dp_2delta.txt  dp_4delta.txt  dp_original.txt  fl_200.txt  noise_1.txt  vanillaFL_acc.txt  zkfl_acc_with_mal.txt
py/: CIFAR0.pt  end_to_end_test.py  fmia.ipynb  glir.ipynb  mia.ipynb  mia2.ipynb  network.py  pofl.ipynb  privacy_calc.ipynb  process.py  server.py  test.ipynb  test.py
py/blockchain/: __init__.py  blockchain.py  transaction.py
py/blockchain/consensus/: proof_of_work.py
py/blockchain/data/: block1.txt  block10.block  block11.block  block2.txt  block3.txt  block4.block  block5.block  block6.block  block7.block  block8.block  block9.block
py/federated_learning/: __init__.py  aggregator.py  client.py  data_utils.py  end_to_end_test.py  model.py  simpleCNN_classification.txt  test.ipynb  train.py  utils.py
py/federated_learning/attacks/: dp_sgd.py  glir.py  utils.py
py/federated_learning/layerInfo/: LeNet_Small_avgpool2_output_q.txt  LeNet_Small_classification.txt  LeNet_Small_conv1_output_s.txt  LeNet_Small_conv1_weight_s.txt  LeNet_Small_conv2_output_s.txt  LeNet_Small_conv2_weight_s.txt  LeNet_Small_conv3_output_q.txt  LeNet_Small_conv3_output_s.txt  LeNet_Small_conv3_weight_s.txt  (+6 more)
src/: commit_circuit.rs  fc_circuit.rs  full_circuit.rs  lib.rs  main.rs  read_inputs.rs
(+12 files in other folders)
